add-ons/minio/minio-operator/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replacepath
  namespace: minio-operator
spec:
 replacePathRegex:
    regex: "^/test(/|$)(.*)"
    replacement: "/${2}"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
    traefik.ingress.kubernetes.io/router.middlewares: "minio-operator-replacepath@kubernetescrd"
  name: minio
  namespace: minio-operator
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ptisma.online
    - www.ptisma.online
    secretName: ptisma-online-tls
  rules:
  - host: ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: /test/
          backend:
            service:
              name: console
              port:
                number: 9090
  - host: www.ptisma.online
    http:
      paths:
        - pathType: Prefix
          path: /test/
          backend:
            service:
              name: console
              port:
                number: 9090
